Revision history for Daux

0.1.11    2013-07-21 01:09:56
          - Going to rewrite float view
          - Own CSS starting to work
          - Started remove Bootstrap and lessc
          - Help model complete
          - Microformats register their extensions
          - Supports POD as second microformat
          - Daemon can start multiple instances
          - Added Daemon
          - Favicon, cfg files and Plack sorted
          - Rename to Doh complete
          - Navigation slider works
          - Removing original name
          - Serves static files
          - Serves pages via plack
          - Added project files to master branch
